# raytracing

./: .gitignore  CMakeLists.txt  Camara.cpp  Camara.h  Camera.cpp  Camera.h  Cylinder.h  Light.h  Luz.h  Mundo.h  Object.h  Objeto.cpp  Objeto.h  Plane.h  Ray.h  Rayo.cpp  Rayo.h  Sphere.h  World.h  a.out  main.cpp  vec3.cpp  vec3.h
